// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The test utility function snapshotPdfFiles should return an empty array from a folder without pdf files 1`] = `Array []`;

exports[`The test utility function snapshotPdfFiles should snapshotPdfFiles a folder with a single pdf file into an array with one element 1`] = `
Array [
  "W7PtzAKUA2zih4RGKq8ZkbwipTo=",
]
`;

exports[`The test utility function snapshotPdfFiles should snapshotPdfFiles a folder with multiple pdf files into an array 1`] = `
Array [
  "CTugA6RdwtG34jUgi8Ge8fNioZs=",
  "Qr2NoA94ZxLxmkK/7uKlCdx3RXE=",
  "W7PtzAKUA2zih4RGKq8ZkbwipTo=",
]
`;
